--- a/data/menu.toml
+++ b/data/menu.toml
@@ -2,14 +2,23 @@
 title = "info"
 
   [[entries.entries]]
-  title = "a (nearly) no-CSS, fast, minimalist Hugo theme ported from <a href='https://github.com/riggraz/no-style-please'>riggraz/no-style-please</a>."
+  title = "the blog and homepage of some weird robot trans girl. 0x4d6165 or Mae or Scout, it/she pronouns :3 🏳️‍⚧️"
 
   [[entries.entries]]
-  title = "github repo"
-  url = "https://github.com/riggraz/no-style-please"
+  title = "<a rel='me' href='https://tech.lgbt/@0x4d6165'>mastodon</a>"
 
   [[entries.entries]]
-  title = "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+  title = "tumblr"
+  url = "https://0x4d6165.tumblr.com"
+
+  [[entries.entries]]
+  title = "last.fm"
+  url = "https://www.last.fm/user/plasticmae"
+
+  [[entries.entries]]
+  title = "git"
+  url = "https://git.sr.ht/~plasticmae"
+
 
 [[entries]]
 title = "all posts"
@@ -20,34 +29,16 @@ title = "all posts"
   show_more_text = "See archive..."
   show_more_url = "posts"
 
-[[entries]]
-title = "posts by category"
-
-  [entries.post_list]
-  section = "posts"
-  show_more = true
-  show_more_text = "See more posts..."
-  show_more_url = "posts"
+# [[entries]]
+# title = "posts by category"
+# 
+#   [entries.post_list]
+#   section = "posts"
+#   show_more = true
+#   show_more_text = "See more posts..."
+#   show_more_url = "posts"
 
 [[entries]]
 title = "rss"
 url = "index.xml"
 
-[[entries]]
-title = "another list"
-
-  [[entries.entries]]
-  title = "with subitems"
-
-    [[entries.entries.entries]]
-    title = "with subsubitems"
-
-    [[entries.entries.entries]]
-    title = "example page"
-    url = "about"
-
-[[entries]]
-title = "PRO TIP"
-entries = [
-   { title = "to edit this menu, edit data/menu.toml file" }
-  ]
