Added email address to the info section

--- a/data/menu.toml
+++ b/data/menu.toml
@@ -19,6 +19,9 @@ title = "<h4>info<h4/>"
   title = "git"
   url = "https://git.sr.ht/~plasticmae"
 
+  [[entries.entries]]
+  title = "feel free to say hi! maeborow[at]posteo[dot]net"
+    
 
 [[entries]]
 title = "<h4>all posts</h4>"
