--- a/data/menu.toml
+++ b/data/menu.toml
@@ -17,7 +17,7 @@ title = "<h4>info<h4/>"
 
   [[entries.entries]]
   title = "git"
-  url = "https://git.sr.ht/~plasticmae"
+  url = "https://git.sr.ht/~x4d6165"
 
   [[entries.entries]]
   title = "feel free to say hi! maeborow[at]posteo[dot]net"
